// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRecord could have required columns and disable the submit button if they are not set 1`] = `
<span workspaceid="workspace_1" crudmode="true"><form class="p-fluid"><div class="p-fluid"><!----> <div class="p-field"><span style="position: relative;"><div class="p-d-flex" style="position: relative;"><!----> <label for="string_1_column" class="lck-color-primary untouched pristine required">
          Description
        </label> <span class="column-required">
          *
        </span>
<!---->
</div>
<div class="form-field-editable untouched pristine required"><input class="p-inputtext p-component" id="string_1_column" rows="7"> <span class="cell-state"></span></div> <span class="untouched pristine required"></span></span></div>
<div class="p-field"><span style="position: relative;"><div class="p-d-flex" style="position: relative;"><!----> <label for="number_1_column" class="lck-color-primary untouched pristine required">
          Number
        </label> <span class="column-required">
          *
        </span>
  <!---->
</div>
<div class="form-field-editable untouched pristine required"><span class="p-inputnumber p-component"><input class="p-inputtext p-component p-inputnumber-input" id="number_1_column" rows="7"> <!----> <!----> <!----></span> <span class="cell-state"></span></div> <span class="untouched pristine required"></span></span></div>
<div class="p-field"><span style="position: relative;"><div class="p-d-flex" style="position: relative;"><div class="p-checkbox p-component"><div class="p-hidden-accessible"><input type="checkbox" id="boolean_1_column" value=""></div> <div role="checkbox" class="p-checkbox-box"><span class="p-checkbox-icon"></span></div>
</div> <label for="boolean_1_column" class="lck-color-primary untouched pristine required">
  Boolean
</label> <span class="column-required">
          *
        </span> <span class="cell-state"></span></div>
<div class="form-field-editable untouched pristine required">
  <!---->
  <!---->
</div> <span class="untouched pristine required"></span></span></div>
</div>
<div class="lck-form-footer">
  <!----> <button type="submit" class="p-button p-component full-width-button" disabled="disabled"><span class="pi pi-save p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.save</span>
    <!----></button></div>
</form>
</span>
`;

exports[`FormRecord could have required columns enable the submit button if all fields are set 1`] = `
<span workspaceid="workspace_1" crudmode="true"><form class="p-fluid"><div class="p-fluid"><!----> <div class="p-field"><span style="position: relative;"><div class="p-d-flex" style="position: relative;"><!----> <label for="string_1_column" class="lck-color-primary untouched pristine valid validated required changed passed">
          Description
        </label> <span class="column-required">
          *
        </span>
<!---->
</div>
<div class="form-field-editable untouched pristine valid validated required changed passed"><input class="p-inputtext p-component p-filled" id="string_1_column" rows="7"> <span class="cell-state"></span></div> <span class="untouched pristine valid validated required changed passed"></span></span></div>
<div class="p-field"><span style="position: relative;"><div class="p-d-flex" style="position: relative;"><!----> <label for="number_1_column" class="lck-color-primary untouched pristine valid validated required changed passed">
          Number
        </label> <span class="column-required">
          *
        </span>
  <!---->
</div>
<div class="form-field-editable untouched pristine valid validated required changed passed"><span class="p-inputnumber p-component p-inputwrapper-filled"><input class="p-inputtext p-component p-filled p-inputnumber-input" id="number_1_column" rows="7"> <!----> <!----> <!----></span> <span class="cell-state"></span></div> <span class="untouched pristine valid validated required changed passed"></span></span></div>
<div class="p-field"><span style="position: relative;"><div class="p-d-flex" style="position: relative;"><div class="p-checkbox p-component p-checkbox-checked"><div class="p-hidden-accessible"><input type="checkbox" id="boolean_1_column" value=""></div> <div role="checkbox" class="p-checkbox-box p-highlight" aria-checked="true"><span class="p-checkbox-icon pi pi-check"></span></div>
</div> <label for="boolean_1_column" class="lck-color-primary untouched pristine valid validated required changed passed">
  Boolean
</label> <span class="column-required">
          *
        </span> <span class="cell-state"></span></div>
<div class="form-field-editable untouched pristine valid validated required changed passed">
  <!---->
  <!---->
</div> <span class="untouched pristine valid validated required changed passed"></span></span></div>
</div>
<div class="lck-form-footer">
  <!----> <button type="submit" class="p-button p-component full-width-button"><span class="pi pi-save p-button-icon p-button-icon-left"></span> <span class="p-button-label">form.save</span>
    <!----></button></div>
</form>
</span>
`;
